ARM64: configs: Regenerate defconfigs

--- a/arch/arm64/configs/davinci_defconfig
+++ b/arch/arm64/configs/davinci_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.177 Kernel Configuration
+# Linux/arm64 4.14.180 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -2168,6 +2168,7 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_RMI4_CORE is not set
 CONFIG_INPUT_FINGERPRINT=y
 # CONFIG_FINGERPRINT_FPC_TEE is not set
+# CONFIG_FINGERPRINT_FPC_FOD is not set
 CONFIG_FINGERPRINT_GOODIX_TA=y
 
 #
@@ -4970,6 +4971,7 @@ CONFIG_PWM=y
 CONFIG_PWM_SYSFS=y
 # CONFIG_PWM_FSL_FTM is not set
 # CONFIG_PWM_PCA9685 is not set
+# CONFIG_PWM_QCOM is not set
 CONFIG_PWM_QTI_LPG=y
 CONFIG_QCOM_KGSL=y
 CONFIG_QCOM_ADRENO_DEFAULT_GOVERNOR="msm-adreno-tz"
@@ -5911,9 +5913,12 @@ CONFIG_WSA_MACRO=y
 #
 CONFIG_MACH_XIAOMI=y
 CONFIG_MACH_XIAOMI_SDMMAGPIE=y
+# CONFIG_MACH_XIAOMI_SM6150 is not set
 
 #
 # Xiaomi board selection
 #
+# CONFIG_MACH_XIAOMI_F4 is not set
+# CONFIG_MACH_XIAOMI_F7B is not set
 CONFIG_MACH_XIAOMI_F10=y
 # CONFIG_MACH_XIAOMI_G7B is not set
