--- a/arch/arm64/configs/davinci_defconfig
+++ b/arch/arm64/configs/davinci_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.170 Kernel Configuration
+# Linux/arm64 4.14.182 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -47,7 +47,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-LineageOS"
+CONFIG_LOCALVERSION="-PE"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -108,6 +108,7 @@ CONFIG_TASKSTATS=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_PSI=y
+# CONFIG_PSI_DEFAULT_DISABLED is not set
 
 #
 # RCU Subsystem
@@ -244,6 +245,7 @@ CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
 # CONFIG_KPROBES is not set
 CONFIG_JUMP_LABEL=y
+# CONFIG_STATIC_KEYS_SELFTEST is not set
 CONFIG_UPROBES=y
 # CONFIG_HAVE_64BIT_ALIGNED_ACCESS is not set
 CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
@@ -529,7 +531,7 @@ CONFIG_PREEMPT_COUNT=y
 # CONFIG_HZ_250 is not set
 CONFIG_HZ_300=y
 # CONFIG_HZ_1000 is not set
-CONFIG_HZ=100
+CONFIG_HZ=300
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_SUPPORTS_DEBUG_PAGEALLOC=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
@@ -569,7 +571,6 @@ CONFIG_ARCH_SUPPORTS_MEMORY_FAILURE=y
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
 # CONFIG_CMA_DEBUGFS is not set
-# CONFIG_CMA_ALLOW_WRITE_DEBUGFS is not set
 CONFIG_CMA_AREAS=7
 # CONFIG_ZPOOL is not set
 # CONFIG_ZBUD is not set
@@ -678,6 +679,7 @@ CONFIG_PM_GENERIC_DOMAINS=y
 CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
 CONFIG_PM_GENERIC_DOMAINS_OF=y
 CONFIG_CPU_PM=y
+# CONFIG_DEDUCE_WAKEUP_REASONS is not set
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 
@@ -705,7 +707,6 @@ CONFIG_ARM_CPUIDLE=y
 #
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_ATTR_SET=y
-CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_TIMES=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
@@ -769,7 +770,6 @@ CONFIG_IP_PNP_DHCP=y
 # CONFIG_NET_IPIP is not set
 # CONFIG_NET_IPGRE_DEMUX is not set
 CONFIG_NET_IP_TUNNEL=y
-# CONFIG_NET_IPGRE is not set
 # CONFIG_IP_MROUTE is not set
 CONFIG_SYN_COOKIES=y
 CONFIG_NET_IPVTI=y
@@ -815,7 +815,6 @@ CONFIG_IPV6_SIT=y
 # CONFIG_IPV6_SIT_6RD is not set
 CONFIG_IPV6_NDISC_NODETYPE=y
 CONFIG_IPV6_TUNNEL=y
-# CONFIG_IPV6_GRE is not set
 # CONFIG_IPV6_FOU is not set
 # CONFIG_IPV6_FOU_TUNNEL is not set
 CONFIG_IPV6_MULTIPLE_TABLES=y
@@ -952,7 +951,6 @@ CONFIG_NETFILTER_XT_MATCH_MULTIPORT=y
 # CONFIG_NETFILTER_XT_MATCH_OSF is not set
 CONFIG_NETFILTER_XT_MATCH_OWNER=y
 CONFIG_NETFILTER_XT_MATCH_POLICY=y
-# CONFIG_NETFILTER_XT_MATCH_PHYSDEV is not set
 CONFIG_NETFILTER_XT_MATCH_PKTTYPE=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA2=y
@@ -1220,7 +1218,6 @@ CONFIG_BT_DEBUGFS=y
 # Bluetooth device drivers
 #
 # CONFIG_BT_HCIBTUSB is not set
-# CONFIG_BT_HCIBTSDIO is not set
 # CONFIG_BT_HCIUART is not set
 # CONFIG_BT_HCIBCM203X is not set
 # CONFIG_BT_HCIBFUSB is not set
@@ -1277,6 +1274,7 @@ CONFIG_HAVE_EBPF_JIT=y
 #
 # Device Drivers
 #
+# CONFIG_BUILTINS_ASYNC_PROBE is not set
 CONFIG_ARM_AMBA=y
 
 #
@@ -1293,9 +1291,7 @@ CONFIG_EXTRA_FIRMWARE=""
 CONFIG_FW_LOADER_USER_HELPER=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 # CONFIG_FW_CACHE is not set
-CONFIG_WANT_DEV_COREDUMP=y
 CONFIG_ALLOW_DEV_COREDUMP=y
-CONFIG_DEV_COREDUMP=y
 # CONFIG_DEBUG_DRIVER is not set
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_DEBUG_TEST_DRIVER_REMOVE is not set
@@ -1897,7 +1893,6 @@ CONFIG_PPP_FILTER=y
 CONFIG_PPP_MPPE=y
 CONFIG_PPP_MULTILINK=y
 CONFIG_PPPOE=y
-CONFIG_PPTP=y
 CONFIG_PPPOL2TP=y
 CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
@@ -1993,7 +1988,6 @@ CONFIG_CLD_LL_CORE=y
 # CONFIG_CNSS is not set
 # CONFIG_CLD_DEBUG is not set
 # CONFIG_CLD_USB_CORE is not set
-# CONFIG_CLD_HL_SDIO_CORE is not set
 # CONFIG_CNSS_LOGGER is not set
 # CONFIG_WLAN_FEATURE_RX_WAKELOCK is not set
 CONFIG_CNSS_UTILS=y
@@ -2064,12 +2058,12 @@ CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_JOYSTICK is not set
 # CONFIG_INPUT_TABLET is not set
 CONFIG_INPUT_TOUCHSCREEN=y
-# CONFIG_TOUCHSCREEN_NT36xxx_HOSTDL_SPI is not set
-# CONFIG_TOUCHSCREEN_NVT_DEBUG_FS is not set
 CONFIG_TOUCHSCREEN_GOODIX_GTX8=y
 CONFIG_TOUCHSCREEN_GOODIX_GTX8_UPDATE=y
 CONFIG_TOUCHSCREEN_GOODIX_GTX8_GESTURE=y
 CONFIG_TOUCHSCREEN_GOODIX_GTX8_TOOLS=y
+# CONFIG_TOUCHSCREEN_NT36xxx_HOSTDL_SPI is not set
+# CONFIG_TOUCHSCREEN_NVT_DEBUG_FS is not set
 CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
 # CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE_PALMSENSOR is not set
 # CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE_GAMEMODE is not set
@@ -2177,7 +2171,6 @@ CONFIG_INPUT_FINGERPRINT=y
 # CONFIG_FINGERPRINT_FPC_TEE is not set
 # CONFIG_FINGERPRINT_FPC_FOD is not set
 CONFIG_FINGERPRINT_GOODIX_TA=y
-# CONFIG_FINGERPRINT_GOODIX_FOD is not set
 
 #
 # Hardware I/O ports
@@ -2584,8 +2577,8 @@ CONFIG_QPNP_SMB5=y
 # CONFIG_QPNP_QNOVO5 is not set
 # CONFIG_SMB1390_CHARGE_PUMP is not set
 CONFIG_SMB1390_CHARGE_PUMP_PSY=y
-# CONFIG_BATT_VERIFY_BY_DS28E16 is not set
-# CONFIG_ONEWIRE_GPIO is not set
+# CONFIG_SMB1398_CHARGER is not set
+CONFIG_XIAOMI_CHARGE_THERMAL=y
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
 # CONFIG_HWMON_DEBUG_CHIP is not set
@@ -2924,20 +2917,6 @@ CONFIG_REGULATOR_RPMH=y
 # CONFIG_REGULATOR_SPM is not set
 CONFIG_REGULATOR_STUB=y
 # CONFIG_RC_CORE is not set
-CONFIG_RC_MAP=y
-CONFIG_RC_DECODERS=y
-# CONFIG_LIRC is not set
-CONFIG_IR_NEC_DECODER=y
-CONFIG_IR_RC5_DECODER=y
-CONFIG_IR_RC6_DECODER=y
-CONFIG_IR_JVC_DECODER=y
-CONFIG_IR_SONY_DECODER=y
-CONFIG_IR_SANYO_DECODER=y
-CONFIG_IR_SHARP_DECODER=y
-CONFIG_IR_MCE_KBD_DECODER=y
-CONFIG_IR_XMP_DECODER=y
-# CONFIG_RC_DEVICES is not set
-CONFIG_IR_MSM_GENI=y
 CONFIG_MEDIA_SUPPORT=y
 
 #
@@ -3038,13 +3017,10 @@ CONFIG_USB_GSPCA=y
 # Analog/digital TV USB devices
 #
 # CONFIG_VIDEO_AU0828 is not set
-# CONFIG_VIDEO_CX231XX is not set
-# CONFIG_VIDEO_TM6000 is not set
 
 #
 # Digital TV USB devices
 #
-# CONFIG_DVB_USB is not set
 # CONFIG_DVB_USB_V2 is not set
 # CONFIG_DVB_TTUSB_BUDGET is not set
 # CONFIG_DVB_TTUSB_DEC is not set
@@ -3069,8 +3045,8 @@ CONFIG_V4L_PLATFORM_DRIVERS=y
 #
 CONFIG_SPECTRA_CAMERA=y
 # CONFIG_MSM_AIS is not set
-# CONFIG_CSID_CAMERA is not set
-# CONFIG_SOFTLED_CAMERA is not set
+# CONFIG_MSM_CAMERA is not set
+# CONFIG_MSMB_CAMERA is not set
 CONFIG_MSM_VIDC_V4L2=y
 CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
@@ -3081,7 +3057,6 @@ CONFIG_MSM_NPU=y
 #
 # Qualcomm Technologies, Inc. Demux device config
 #
-# CONFIG_DVB_MPQ_DEMUX is not set
 # CONFIG_TSPP is not set
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 # CONFIG_V4L_TEST_DRIVERS is not set
@@ -3106,7 +3081,6 @@ CONFIG_MSM_NPU=y
 #
 # Supported MMC/SDIO adapters
 #
-# CONFIG_SMS_SDIO_DRV is not set
 # CONFIG_CYPRESS_FIRMWARE is not set
 
 #
@@ -3114,7 +3088,6 @@ CONFIG_MSM_NPU=y
 #
 CONFIG_MEDIA_SUBDRV_AUTOSELECT=y
 CONFIG_MEDIA_ATTACH=y
-CONFIG_VIDEO_IR_I2C=y
 
 #
 # Audio decoders, processors and mixers
@@ -3273,6 +3246,7 @@ CONFIG_DRM_SDE_WB=y
 # CONFIG_DRM_SDE_SHP is not set
 CONFIG_DRM_SDE_EVTLOG_DEBUG=y
 CONFIG_DRM_SDE_RSC=y
+# CONFIG_FENCE_DEBUG is not set
 # CONFIG_DRM_MSM_LEASE is not set
 CONFIG_DRM_PANEL=y
 
@@ -3389,19 +3363,6 @@ CONFIG_FB_ARMCLCD=y
 # CONFIG_FB_SM712 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
-# CONFIG_LCD_L4F00242T03 is not set
-# CONFIG_LCD_LMS283GF05 is not set
-# CONFIG_LCD_LTV350QV is not set
-# CONFIG_LCD_ILI922X is not set
-# CONFIG_LCD_ILI9320 is not set
-# CONFIG_LCD_TDO24M is not set
-# CONFIG_LCD_VGG2432A4 is not set
-# CONFIG_LCD_PLATFORM is not set
-# CONFIG_LCD_S6E63M0 is not set
-# CONFIG_LCD_LD9040 is not set
-# CONFIG_LCD_AMS369FG06 is not set
-# CONFIG_LCD_LMS501KF03 is not set
-# CONFIG_LCD_HX8357 is not set
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_GENERIC=y
 # CONFIG_BACKLIGHT_PWM is not set
@@ -3744,19 +3705,12 @@ CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_XHCI_PCI=y
 CONFIG_USB_XHCI_PLATFORM=y
 # CONFIG_USB_EHCI_HCD is not set
-# CONFIG_USB_EHCI_ROOT_HUB_TT is not set
-CONFIG_USB_EHCI_TT_NEWSCHED=y
-CONFIG_USB_EHCI_PCI=y
-# CONFIG_USB_EHCI_MSM is not set
-# CONFIG_USB_EHCI_HCD_PLATFORM is not set
 # CONFIG_USB_OXU210HP_HCD is not set
 # CONFIG_USB_ISP116X_HCD is not set
 # CONFIG_USB_ISP1362_HCD is not set
 # CONFIG_USB_FOTG210_HCD is not set
 # CONFIG_USB_MAX3421_HCD is not set
 # CONFIG_USB_OHCI_HCD is not set
-# CONFIG_USB_OHCI_HCD_PCI is not set
-# CONFIG_USB_OHCI_HCD_PLATFORM is not set
 # CONFIG_USB_UHCI_HCD is not set
 # CONFIG_USB_SL811_HCD is not set
 # CONFIG_USB_R8A66597_HCD is not set
@@ -3838,7 +3792,6 @@ CONFIG_USB_ISP1760_HOST_ROLE=y
 # CONFIG_USB_IDMOUSE is not set
 # CONFIG_USB_FTDI_ELAN is not set
 # CONFIG_USB_APPLEDISPLAY is not set
-# CONFIG_USB_SISUSBVGA is not set
 # CONFIG_USB_LD is not set
 # CONFIG_USB_TRANCEVIBRATOR is not set
 # CONFIG_USB_IOWARRIOR is not set
@@ -3962,45 +3915,6 @@ CONFIG_QPNP_USB_PDPHY=y
 # CONFIG_USB_ULPI_BUS is not set
 # CONFIG_UWB is not set
 # CONFIG_MMC is not set
-# CONFIG_MMC_PERF_PROFILING is not set
-CONFIG_PWRSEQ_EMMC=y
-CONFIG_PWRSEQ_SIMPLE=y
-# CONFIG_MMC_BLOCK is not set
-# CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
-# CONFIG_SDIO_UART is not set
-# CONFIG_MMC_TEST is not set
-# CONFIG_MMC_RING_BUFFER is not set
-# CONFIG_MMC_EMBEDDED_SDIO is not set
-# CONFIG_MMC_PARANOID_SD_INIT is not set
-# CONFIG_MMC_CLKGATE is not set
-# CONFIG_MMC_SIMULATE_MAX_SPEED is not set
-
-#
-# MMC/SD/SDIO Host Controller Drivers
-#
-# CONFIG_MMC_DEBUG is not set
-# CONFIG_MMC_ARMMMCI is not set
-# CONFIG_MMC_SDHCI is not set
-# CONFIG_MMC_SDHCI_PCI is not set
-# CONFIG_MMC_SDHCI_OF_ARASAN is not set
-# CONFIG_MMC_SDHCI_OF_AT91 is not set
-# CONFIG_MMC_SDHCI_CADENCE is not set
-# CONFIG_MMC_SDHCI_F_SDH30 is not set
-CONFIG_MMC_SDHCI_MSM=y
-CONFIG_MMC_SDHCI_MSM_ICE=y
-# CONFIG_MMC_TIFM_SD is not set
-# CONFIG_MMC_SPI is not set
-# CONFIG_MMC_CB710 is not set
-# CONFIG_MMC_VIA_SDMMC is not set
-# CONFIG_MMC_CAVIUM_THUNDERX is not set
-# CONFIG_MMC_DW is not set
-# CONFIG_MMC_VUB300 is not set
-# CONFIG_MMC_USHC is not set
-# CONFIG_MMC_USDHI6ROL0 is not set
-CONFIG_MMC_CQ_HCI=y
-# CONFIG_MMC_TOSHIBA_PCI is not set
-# CONFIG_MMC_MTK is not set
-# CONFIG_MMC_SDHCI_XENON is not set
 # CONFIG_MEMSTICK is not set
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
@@ -4260,7 +4174,6 @@ CONFIG_STAGING=y
 # CONFIG_COMEDI is not set
 # CONFIG_RTL8192U is not set
 # CONFIG_RTLLIB is not set
-# CONFIG_RTL8723BS is not set
 # CONFIG_R8712U is not set
 # CONFIG_R8188EU is not set
 # CONFIG_RTS5208 is not set
@@ -4353,7 +4266,6 @@ CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 # CONFIG_ANDROID_VSOC is not set
 # CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
-# CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES is not set
 CONFIG_ION=y
 # CONFIG_ION_SYSTEM_HEAP is not set
 # CONFIG_ION_CARVEOUT_HEAP is not set
@@ -4361,8 +4273,6 @@ CONFIG_ION=y
 # CONFIG_ION_CMA_HEAP is not set
 # CONFIG_ION_FORCE_DMA_SYNC is not set
 CONFIG_ION_DEFER_FREE_NO_SCHED_IDLE=y
-# CONFIG_FIQ_DEBUGGER is not set
-# CONFIG_FIQ_WATCHDOG is not set
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_LTE_GDM724X is not set
 # CONFIG_LNET is not set
@@ -4370,10 +4280,8 @@ CONFIG_ION_DEFER_FREE_NO_SCHED_IDLE=y
 # CONFIG_GS_FPGABOOT is not set
 # CONFIG_COMMON_CLK_XLNX_CLKWZRD is not set
 # CONFIG_FB_TFT is not set
-# CONFIG_WILC1000_SDIO is not set
 # CONFIG_WILC1000_SPI is not set
 # CONFIG_MOST is not set
-# CONFIG_KS7010 is not set
 # CONFIG_GREYBUS is not set
 # CONFIG_CRYPTO_DEV_CCREE is not set
 
@@ -4520,7 +4428,7 @@ CONFIG_ARM_ARCH_TIMER_OOL_WORKAROUND=y
 CONFIG_FSL_ERRATUM_A008585=y
 CONFIG_HISILICON_ERRATUM_161010101=y
 CONFIG_ARM64_ERRATUM_858921=y
-# CONFIG_ARM_ARCH_TIMER_VCT_ACCESS is not set
+CONFIG_ARM_ARCH_TIMER_VCT_ACCESS=y
 # CONFIG_ARM_TIMER_SP804 is not set
 # CONFIG_ATMEL_PIT is not set
 # CONFIG_SH_TIMER_CMT is not set
@@ -4654,9 +4562,8 @@ CONFIG_QCOM_SECURE_BUFFER=y
 CONFIG_ICNSS=y
 # CONFIG_ICNSS_DEBUG is not set
 CONFIG_ICNSS_QMI=y
+# CONFIG_CNSS_TIMESYNC is not set
 CONFIG_QCOM_EUD=y
-CONFIG_QCOM_MINIDUMP=y
-CONFIG_MINIDUMP_MAX_ENTRIES=200
 CONFIG_QCOM_BUS_SCALING=y
 CONFIG_QCOM_BUS_CONFIG_RPMH=y
 CONFIG_QCOM_COMMAND_DB=y
@@ -5064,6 +4971,7 @@ CONFIG_PWM=y
 CONFIG_PWM_SYSFS=y
 # CONFIG_PWM_FSL_FTM is not set
 # CONFIG_PWM_PCA9685 is not set
+# CONFIG_PWM_QCOM is not set
 CONFIG_PWM_QTI_LPG=y
 CONFIG_QCOM_KGSL=y
 CONFIG_QCOM_ADRENO_DEFAULT_GOVERNOR="msm-adreno-tz"
@@ -5190,9 +5098,6 @@ CONFIG_EXT4_FS=y
 CONFIG_EXT4_USE_FOR_EXT2=y
 # CONFIG_EXT4_FS_POSIX_ACL is not set
 CONFIG_EXT4_FS_SECURITY=y
-CONFIG_EXT4_ENCRYPTION=y
-CONFIG_EXT4_FS_ENCRYPTION=y
-CONFIG_EXT4_FS_ICE_ENCRYPTION=y
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_JBD2=y
 # CONFIG_JBD2_DEBUG is not set
@@ -5210,7 +5115,6 @@ CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
 # CONFIG_F2FS_CHECK_FS is not set
-CONFIG_F2FS_FS_ENCRYPTION=y
 # CONFIG_F2FS_FAULT_INJECTION is not set
 # CONFIG_FS_DAX is not set
 CONFIG_FS_POSIX_ACL=y
@@ -5257,10 +5161,20 @@ CONFIG_FAT_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="utf8"
-CONFIG_SDFAT_SUPPORT_DIR_SYNC=y
-CONFIG_SDFAT_CHECK_RO_ATTR=y
-# CONFIG_SDFAT_DEBUG is not set
 # CONFIG_FAT_DEFAULT_UTF8 is not set
+CONFIG_SDFAT_FS=y
+CONFIG_SDFAT_USE_FOR_EXFAT=y
+CONFIG_SDFAT_DELAYED_META_DIRTY=y
+CONFIG_SDFAT_SUPPORT_DIR_SYNC=y
+CONFIG_SDFAT_DEFAULT_CODEPAGE=437
+CONFIG_SDFAT_DEFAULT_IOCHARSET="utf8"
+CONFIG_SDFAT_CHECK_RO_ATTR=y
+CONFIG_SDFAT_ALIGNED_MPAGE_WRITE=y
+CONFIG_SDFAT_VIRTUAL_XATTR=y
+CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
+# CONFIG_SDFAT_DEBUG is not set
+CONFIG_SDFAT_STATISTICS=y
+CONFIG_SDFAT_UEVENT=y
 # CONFIG_NTFS_FS is not set
 
 #
@@ -5303,7 +5217,11 @@ CONFIG_SDCARD_FS=y
 # CONFIG_QNX6FS_FS is not set
 # CONFIG_ROMFS_FS is not set
 CONFIG_PSTORE=y
+CONFIG_PSTORE_ZLIB_COMPRESS=y
+# CONFIG_PSTORE_LZO_COMPRESS is not set
+# CONFIG_PSTORE_LZ4_COMPRESS is not set
 CONFIG_PSTORE_CONSOLE=y
+# CONFIG_PSTORE_PMSG is not set
 CONFIG_PSTORE_RAM=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
@@ -5365,7 +5283,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_MAC_INUIT is not set
 # CONFIG_NLS_MAC_ROMANIAN is not set
 # CONFIG_NLS_MAC_TURKISH is not set
-# CONFIG_NLS_UTF8 is not set
+CONFIG_NLS_UTF8=y
 # CONFIG_DLM is not set
 # CONFIG_FILE_TABLE_DEBUG is not set
 # CONFIG_VIRTUALIZATION is not set
@@ -5512,6 +5430,7 @@ CONFIG_IPC_LOGGING=y
 # CONFIG_QCOM_RTB is not set
 CONFIG_TRACING=y
 CONFIG_GENERIC_TRACER=y
+CONFIG_DISABLE_TRACE_PRINTK=y
 CONFIG_TRACING_SUPPORT=y
 CONFIG_FTRACE=y
 # CONFIG_FUNCTION_TRACER is not set
@@ -5575,7 +5494,7 @@ CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # CONFIG_ARCH_WANTS_UBSAN_NO_NULL is not set
 # CONFIG_UBSAN is not set
 CONFIG_ARCH_HAS_DEVMEM_IS_ALLOWED=y
-CONFIG_ARM64_PTDUMP_CORE=y
+# CONFIG_ARM64_PTDUMP_CORE is not set
 # CONFIG_ARM64_PTDUMP_DEBUGFS is not set
 # CONFIG_PID_IN_CONTEXTIDR is not set
 # CONFIG_ARM64_RANDOMIZE_TEXT_OFFSET is not set
@@ -5809,10 +5728,12 @@ CONFIG_CRYPTO_DEV_QCEDEV=y
 CONFIG_CRYPTO_DEV_QCOM_ICE=y
 CONFIG_ASYMMETRIC_KEY_TYPE=y
 CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
+# CONFIG_X509_CERTIFICATE_PARSER is not set
 
 #
 # Certificates for signature checking
 #
+# CONFIG_SYSTEM_TRUSTED_KEYRING is not set
 # CONFIG_SYSTEM_BLACKLIST_KEYRING is not set
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA256_ARM64=y
@@ -5864,6 +5785,8 @@ CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
 CONFIG_DECOMPRESS_GZIP=y
@@ -5871,6 +5794,7 @@ CONFIG_DECOMPRESS_BZIP2=y
 CONFIG_DECOMPRESS_LZMA=y
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_REED_SOLOMON=y
+CONFIG_REED_SOLOMON_ENC8=y
 CONFIG_REED_SOLOMON_DEC8=y
 CONFIG_TEXTSEARCH=y
 CONFIG_TEXTSEARCH_KMP=y
@@ -5894,7 +5818,6 @@ CONFIG_CLZ_TAB=y
 # CONFIG_IRQ_POLL is not set
 CONFIG_MPILIB=y
 CONFIG_LIBFDT=y
-CONFIG_OID_REGISTRY=y
 # CONFIG_SG_SPLIT is not set
 CONFIG_SG_POOL=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
@@ -5965,8 +5888,8 @@ CONFIG_SND_SOC_WCD9XXX_V2=y
 # CONFIG_SND_SOC_WCD_CPE is not set
 CONFIG_SND_SOC_WCD_DSP_MGR=y
 CONFIG_SND_SOC_WCD_IRQ=y
-CONFIG_SND_SOC_WCD_MBHC_ADC=y
 CONFIG_SND_SOC_WCD_MBHC=y
+CONFIG_SND_SOC_WCD_MBHC_ADC=y
 # CONFIG_SND_SOC_WCD_MBHC_LEGACY is not set
 CONFIG_SND_SOC_WCD_SPI=y
 CONFIG_SND_SOC_WSA881X=y
@@ -5986,9 +5909,12 @@ CONFIG_WSA_MACRO=y
 #
 CONFIG_MACH_XIAOMI=y
 CONFIG_MACH_XIAOMI_SDMMAGPIE=y
+# CONFIG_MACH_XIAOMI_SM6150 is not set
 
 #
 # Xiaomi board selection
 #
+# CONFIG_MACH_XIAOMI_F4 is not set
+# CONFIG_MACH_XIAOMI_F7B is not set
 CONFIG_MACH_XIAOMI_F10=y
 # CONFIG_MACH_XIAOMI_G7B is not set
